--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^16.0.1"
+    "react-i18next": "^16.0.1",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
