--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.1",
+    "react-loading-indicators": "^1.0.1",
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
