--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@total-typescript/shoehorn": "^0.1.2",
     "classnames": "^2.5.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
